--- a/VPNShield/VPNShield.csproj
+++ b/VPNShield/VPNShield.csproj
@@ -40,52 +40,56 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Assembly-CSharp-Publicized.dll</HintPath>
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Assembly-CSharp-Publicized.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Sean\Desktop\SCPSL\SCPSL_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>D:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="CommandSystem.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\CommandSystem.Core.dll</HintPath>
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\CommandSystem.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.API, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.API.dll</HintPath>
+    <Reference Include="Exiled.API, Version=5.1.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.API.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.Bootstrap, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.Bootstrap.dll</HintPath>
+    <Reference Include="Exiled.Bootstrap, Version=5.1.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.Bootstrap.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.CreditTags, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.CreditTags.dll</HintPath>
+    <Reference Include="Exiled.CreditTags, Version=5.1.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.CreditTags.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.CustomItems, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.CustomItems.dll</HintPath>
+    <Reference Include="Exiled.CustomItems, Version=5.1.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.CustomItems.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.CustomRoles, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.CustomRoles.dll</HintPath>
+    <Reference Include="Exiled.CustomRoles, Version=5.1.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.CustomRoles.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.Events, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.Events.dll</HintPath>
+    <Reference Include="Exiled.Events, Version=5.1.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.Events.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.Loader, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.Loader.dll</HintPath>
+    <Reference Include="Exiled.Loader, Version=5.1.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.Loader.dll</HintPath>
     </Reference>
-    <Reference Include="Exiled.Permissions, Version=5.0.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.Permissions.dll</HintPath>
+    <Reference Include="Exiled.Permissions, Version=5.1.3.0, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.Permissions.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Updater, Version=3.1.1.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\Exiled.Updater.dll</HintPath>
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\Exiled.Updater.dll</HintPath>
+    </Reference>
+    <Reference Include="LiteDB, Version=5.0.11.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
+      <HintPath>..\packages\LiteDB.5.0.11\lib\net45\LiteDB.dll</HintPath>
     </Reference>
     <Reference Include="Mirror, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Sean\Desktop\SCPSL\SCPSL_Data\Managed\Mirror.dll</HintPath>
+      <HintPath>D:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Mirror.dll</HintPath>
     </Reference>
     <Reference Include="NorthwoodLib, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\EXILED.5.0.0-beta.3\lib\net472\NorthwoodLib.dll</HintPath>
+      <HintPath>..\packages\EXILED.5.1.3\lib\net472\NorthwoodLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -93,34 +97,55 @@
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Sean\Desktop\SCPSL\SCPSL_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>D:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Sean\Desktop\SCPSL\SCPSL_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>D:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account.cs" />
-    <Compile Include="Commands\Reload.cs" />
+    <Compile Include="API\Account.cs" />
+    <Compile Include="Commands\ClearIPs.cs" />
+    <Compile Include="Commands\ClearSubnets.cs" />
+    <Compile Include="Commands\ClearUserIds.cs" />
+    <Compile Include="Commands\GetStatus.cs" />
+    <Compile Include="Commands\GetWhitelistedIPSubnets.cs" />
+    <Compile Include="Commands\WhitelistGlobal.cs" />
+    <Compile Include="Commands\BlacklistIP.cs" />
+    <Compile Include="Commands\WhitelistIP.cs" />
+    <Compile Include="Commands\WhitelistIPSubnet.cs" />
+    <Compile Include="Commands\BlacklistIPSubnet.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="EventHandlers.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="GlobalWhitelist.cs" />
+    <Compile Include="Convenience.cs" />
+    <Compile Include="DbManager.cs" />
+    <Compile Include="Enums\AccountCheckResult.cs" />
+    <Compile Include="Enums\KickReason.cs" />
+    <Compile Include="Handlers\EventHandlers.cs" />
+    <Compile Include="Objects\IpHubApiResponse.cs" />
     <Compile Include="Objects\SteamPlaytimeApiResponse.cs" />
+    <Compile Include="Objects\VPNShieldIPSubnet.cs" />
+    <Compile Include="Objects\VPNShieldUserId.cs" />
     <Compile Include="Objects\VPNShieldUpdateCheckResponse.cs" />
-    <Compile Include="PlayerToKick.cs" />
     <Compile Include="Filesystem.cs" />
+    <Compile Include="Objects\VPNShieldIP.cs" />
     <Compile Include="UpdateCheck.cs" />
-    <Compile Include="VPN.cs" />
+    <Compile Include="API\VPN.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Objects\IpHubApiResponse.cs" />
     <Compile Include="Objects\SteamAgeApiResponse.cs" />
     <Compile Include="WebhookHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="_OldExampleData\VPNShield-BlacklistIPs.txt" />
+    <Content Include="_OldExampleData\VPNShield-WhitelistAccountAgeCheck.txt" />
+    <Content Include="_OldExampleData\VPNShield-WhitelistAccountPlaytimeCheck.txt" />
+    <Content Include="_OldExampleData\VPNShield-WhitelistIPs.txt" />
+    <Content Include="_OldExampleData\VPNShield-WhitelistUserIDs.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
