--- a/VPNShield/packages.config
+++ b/VPNShield/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EXILED" version="5.0.0-beta.3" targetFramework="net472" />
+  <package id="EXILED" version="5.1.3" targetFramework="net472" />
+  <package id="LiteDB" version="5.0.11" targetFramework="net472" />
 </packages>
